codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__footer__tests__footer_shortcuts_running.snap
---
source: tui/src/bottom_pane/footer.rs
expression: terminal.backend()
---
"  Keyboard shortcuts                                                            "
"                                                                                "
"  Compose                            Session                                    "
"  /             Commands             tab     Queue message                      "
"  @             Mention files        ⌥,      Less reasoning                     "
"  !             Shell command        ⌥.      More reasoning                     "
"  ctrl+j        New line             f8      Voice                              "
"  ctrl+v        Paste image          f4      Inspect activity                   "
"  ctrl+g        External editor      ctrl+c  Interrupt                          "
"  ctrl+r        Search history                                                  "
"  ctrl+z        Undo                 Transcript (open first)                    "
"  ctrl+shift+z  Redo                 ctrl+t                Open transcript      "
"  esc esc       Edit last message    f3                    Find text            "
"                                     pgup / pgdn           Scroll               "
"                                     ctrl+space            Start selection      "
"                                     ctrl+home / ctrl+end  Top / latest         "
"                                     shift+⌥, / shift+⌥.   Top / latest         "
"                                                                                "
"  /keymap customize                                                             "
